--- a/css/menu.css
+++ b/css/menu.css
@@ -11,6 +11,9 @@
     border:solid var(--color-blue);
     color: var(--color-blue);
     background-color: #ffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .login__buton:hover{
     background-color: var(--azul);
