--- a/css/productos.css
+++ b/css/productos.css
@@ -1,6 +1,6 @@
 .productos{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-wrap: wrap;
     margin: 20px;
     font-family: var(--letra);
@@ -11,6 +11,7 @@
     height: 150px;
     display: flex;
     flex-direction: column;
+    margin: 20px;
 }
 
 .producto__img{
